--- a/package.json
+++ b/package.json
@@ -60,19 +60,21 @@
     "html-webpack-plugin": "^3.2.0 ",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.2",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.3",
     "react-hot-loader": "^4.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "url-loader": "^0.6.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
     "fs-extra": "^5.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.3",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2"
   },
